--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;500&display=swap');
 
+:root {
+  --text-black: #1d1c1e;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -20,4 +24,13 @@ body {
 
 .container {
   width: 1100px;
+}
+
+li {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: var(--text-black);
 }
