--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -1,5 +1,6 @@
 .main {
   width: 100%;
+  padding: 4px 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -11,4 +12,14 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+}
+
+.inner ul {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: row;
+}
+
+.inner ul li {
+  margin-left: 2rem;
 }
