--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
   --white: #ffffff;
   --pale-grey-blue: #f1f3f5;
   --dark-chocolate: #532500;
+  --red-orange: #e93802;
 }
 
 * {
@@ -16,6 +17,9 @@
 html,
 body {
   font-family: 'Jost', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
 }
 
 .main {
@@ -40,4 +44,81 @@ a {
 
 .text_white {
   color: var(--white);
+}
+
+.text_center {
+  text-align: center;
+}
+
+.text_right {
+  text-align: right;
+}
+
+.text_justify {
+  text-align: justify;
+}
+
+.text_uppercase {
+  text-transform: uppercase;
+}
+
+.heading_primary {
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 48px;
+}
+
+.heading_secondary {
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 48px;
+  letter-spacing: 2px;
+}
+
+.heading_tertiary {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 26px;
+  letter-spacing: 5px;
+}
+
+.corner_radius {
+  border-radius: 15px;
+}
+
+.padding_tb_121 {
+  padding: 121px 0;
+}
+
+.margin_t_25 {
+  margin-top: 25px;
+}
+
+.margin_t_31 {
+  margin-top: 31px;
+}
+
+.margin_t_51 {
+  margin-top: 51px;
+}
+
+.margin_t_75 {
+  margin-top: 75px;
+}
+
+.button {
+  padding: 17px 22px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  border: 4px solid var(--red-orange);
+}
+
+.button_primary {
+  color: var(--white);
+  background: var(--red-orange);
+}
+
+.button_secondary {
+  color: var(--black);
+  background: transparent;
 }
