--- a/src/components/landingpage/benefits/Benefits.module.css
+++ b/src/components/landingpage/benefits/Benefits.module.css
@@ -9,4 +9,21 @@
 
 .benefits_container {
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.left {
+  max-width: 480px;
+  height: 540px;
+  display: flex;
+  flex-direction: column;
+}
+
+.right {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 32px;
 }
