--- a/src/components/landingpage/hero/Hero.module.css
+++ b/src/components/landingpage/hero/Hero.module.css
@@ -13,3 +13,11 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.left {
+  max-width: 521px;
+}
+
+.left a:last-child {
+  margin-left: 17px;
+}
