--- a/src/components/landingpage/overview/Overview.module.css
+++ b/src/components/landingpage/overview/Overview.module.css
@@ -9,3 +9,10 @@
 .overview_container {
   width: 100%;
 }
+
+.card_container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
