--- a/src/components/landingpage/testimonials/Testimonials.module.css
+++ b/src/components/landingpage/testimonials/Testimonials.module.css
@@ -9,19 +9,7 @@
 
 .testimonials_container {
   width: 100%;
-  /* position: relative; */
 }
-
-/* .embla {
-  overflow: hidden;
-}
-.embla__container {
-  display: flex;
-}
-.embla__slide {
-  flex: 0 0 100%;
-  min-width: 0;
-} */
 
 .embla {
   --slide-spacing: 1rem;
@@ -42,6 +30,11 @@
   min-width: 0;
   padding-left: var(--slide-spacing);
   position: relative;
+  cursor: grab;
+}
+
+.embla__slide:active {
+  cursor: grabbing;
 }
 
 .embla__slide__img {
@@ -51,8 +44,12 @@
   object-fit: cover;
 }
 
-.dots_container {
-  width: 100%;
+.arrows_and_dots_container {
+  max-width: 294px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .embla__button {
@@ -66,31 +63,7 @@
   margin: 0;
 }
 
-.embla__buttons {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
-
-/* .embla__button {
-  z-index: 1;
-  color: var(--background-site);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  width: 4rem;
-  height: 4rem;
-} */
-
-/* .embla__button__svg {
-  width: 65%;
-  height: 65%;
-} */
-
 .embla__dot {
-  background-color: transparent;
   touch-action: manipulation;
   display: inline-flex;
   text-decoration: none;
@@ -101,29 +74,17 @@
 }
 
 .embla__dots {
+  width: 50%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
 
-.embla__dot {
-  width: 2.4rem;
-  height: 2.4rem;
-  display: flex;
-  align-items: center;
-  margin-right: 0.75rem;
-  margin-left: 0.75rem;
-}
-
-.embla__dot:after {
-  background: var(--background-site);
+/* .embla__dot:after {
+  background: transparent;
   border-radius: 0.2rem;
   width: 100%;
   height: 0.3rem;
   content: '';
-}
-
-.embla__dot__selected:after {
-  background: red;
-}
+} */
