--- a/src/components/landingpage/testimonials/Testimonials.module.css
+++ b/src/components/landingpage/testimonials/Testimonials.module.css
@@ -5,10 +5,21 @@
   align-items: center;
   justify-content: center;
   background: var(--pale-grey-blue);
+  position: relative;
+}
+
+.dolly_image {
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 
 .testimonials_container {
   width: 100%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .embla {
@@ -31,10 +42,17 @@
   padding-left: var(--slide-spacing);
   position: relative;
   cursor: grab;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .embla__slide:active {
   cursor: grabbing;
+}
+
+.embla__slide p {
+  max-width: 675px;
 }
 
 .embla__slide__img {
@@ -45,6 +63,7 @@
 }
 
 .arrows_and_dots_container {
+  width: 100%;
   max-width: 294px;
   display: flex;
   flex-direction: row;
@@ -80,14 +99,6 @@
   justify-content: space-evenly;
   align-items: center;
 }
-
-/* .embla__dot:after {
-  background: transparent;
-  border-radius: 0.2rem;
-  width: 100%;
-  height: 0.3rem;
-  content: '';
-} */
 
 .dot {
   opacity: 1;
