--- a/src/components/landingpage/calltoaction/CallToAction.module.css
+++ b/src/components/landingpage/calltoaction/CallToAction.module.css
@@ -73,3 +73,92 @@
 .bottom form button:focus {
   outline: none;
 }
+
+.bottom_mobile {
+  display: none;
+}
+
+@media (max-width: 767px) {
+  .calltoaction_main {
+    padding: 39px 0;
+  }
+
+  .calltoaction_container {
+    flex-direction: column;
+  }
+
+  .top {
+    padding: 39px;
+  }
+
+  .top div div {
+    text-align: left;
+  }
+
+  .top div div:first-child {
+    margin-top: 1rem;
+  }
+
+  .left img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .bottom {
+    display: none;
+  }
+
+  .bottom_mobile {
+    width: 100%;
+    padding: 2rem;
+    background: var(--dark-chocolate);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .bottom_mobile form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .bottom_mobile form input[type='email'] {
+    width: 100%;
+    padding: 1rem;
+    color: var(--black);
+    font-family: 'Jost', sans-serif;
+    font-size: 1rem;
+    border: none;
+  }
+
+  .bottom_mobile form input[type='email']::placeholder {
+    color: var(--black);
+    font-size: 15px;
+    opacity: 0.5;
+  }
+
+  .bottom_mobile form button[type='submit'] {
+    width: 100%;
+    padding: 1rem;
+    margin-top: 1rem;
+    background: var(--red-orange);
+    border: none;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .bottom_mobile form button[type='submit'] img {
+    margin-left: 1rem;
+  }
+
+  .bottom_mobile form input[type='email']:focus,
+  .bottom_mobile form button:focus {
+    outline: none;
+  }
+}
