--- a/src/components/landingpage/hero/Hero.module.css
+++ b/src/components/landingpage/hero/Hero.module.css
@@ -18,6 +18,45 @@
   max-width: 521px;
 }
 
-.left a:last-child {
+.button_container a:last-child {
   margin-left: 17px;
+}
+
+.p_container {
+  max-width: 405px;
+}
+
+/* Mobile */
+@media (max-width: 767px) {
+  .hero_container {
+    padding: 0 39px;
+  }
+
+  .button_container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 28px;
+  }
+
+  .button_container a {
+    width: 100%;
+  }
+
+  .button_container a:first-child {
+    text-align: center;
+    font-size: 0.9rem;
+  }
+
+  .button_container a:last-child {
+    margin-left: 0;
+    text-align: center;
+    margin-top: 0.5rem;
+  }
+
+  .right {
+    display: none;
+  }
 }
