--- a/src/components/landingpage/overview/card/Card.module.css
+++ b/src/components/landingpage/overview/card/Card.module.css
@@ -6,6 +6,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  color: var(--white);
 }
 
 .card_image {
@@ -16,4 +17,23 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+/* Mobile */
+@media (max-width: 767px) {
+  .card {
+    max-width: 100%;
+    padding: 1rem 0;
+    background: transparent;
+    color: var(--black);
+  }
+
+  .card_image {
+    background: var(--aqua-blue);
+  }
+
+  .card div:last-child {
+    max-width: 190px;
+    margin-top: 0;
+  }
 }
