--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -23,3 +23,22 @@
 .inner ul li {
   margin-left: 2rem;
 }
+
+.mobile_main {
+  display: none;
+}
+
+/* Mobile */
+@media (max-width: 767px) {
+  .main {
+    display: none;
+  }
+
+  .mobile_main {
+    width: 100%;
+    padding: 4px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
